--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ember-cli-event-properties",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "name": "ember-cli-event-handlers",
+  "version": "0.0.1",
+  "description": "Simple extenstion for Components to automatically manage external event handlers.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,11 +11,11 @@
     "start": "ember server",
     "test": "ember try:each"
   },
-  "repository": "",
+  "repository": "https://github.com/AutoCloud/ember-cli-event-handlers",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "AutoCloud",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
@@ -31,16 +31,19 @@
     "ember-cli-release": "^0.2.9",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.6.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-polyfill-for-tests": "^0.2.0",
     "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.1",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "phantomjs-polyfill": "0.0.2"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "component",
+    "jquery",
+    "events"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.6"
