--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "events"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.6"
+    "ember-cli-babel": "^5.1.6",
+    "ember-runtime-enumerable-includes-polyfill": "^1.0.4"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
