--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-polyfill-for-tests": "^0.2.0",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.1"
   },
