--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "ember-cli-event-handlers",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Simple extenstion for Components to automatically manage external event handlers.",
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
   "scripts": {
@@ -13,34 +12,29 @@
   },
   "repository": "https://github.com/AutoCloud/ember-cli-event-handlers",
   "engines": {
-    "node": ">= 0.12.0"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "author": "AutoCloud",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
-    "ember-assign-polyfill": "2.0.1",
-    "ember-cli": "2.11.1",
-    "ember-cli-app-version": "^2.0.0",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "~2.15.1",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^2.0.1",
-    "ember-cli-qunit": "^3.0.1",
-    "ember-cli-release": "^0.2.9",
-    "ember-cli-shims": "^1.0.2",
+    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.6.0",
-    "ember-polyfill-for-tests": "^0.2.0",
-    "ember-resolver": "^2.0.3",
-    "ember-source": "~2.11.0",
-    "loader.js": "^4.0.10"
+    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.15.0",
+    "loader.js": "^4.2.3"
   },
   "keywords": [
     "ember-addon",
@@ -49,8 +43,7 @@
     "events"
   ],
   "dependencies": {
-    "ember-runtime-enumerable-includes-polyfill": "^1.0.4",
-    "ember-cli-babel": "^5.1.7"
+    "ember-cli-babel": "^6.3.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
