--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "AutoCloud",
   "license": "MIT",
   "devDependencies": {
+    "@ember/jquery": "^0.6.1",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.15.1",
