--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "events"
   ],
   "dependencies": {
-    "ember-cli-babel": "^7.1.2"
+    "ember-cli-babel": "^7.1.2",
+    "ember-cli-element-closest-polyfill": "0.0.1"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
