--- a/package.json
+++ b/package.json
@@ -18,28 +18,30 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^3.0.0",
-    "ember-ajax": "^5.0.0",
     "ember-cli": "^3.10.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^3.1.0",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^2.0.0",
-    "ember-qunit": "^4.4.0",
-    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^3.0.0",
-    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.1.0",
     "ember-source": "~3.10.0",
-    "loader.js": "^4.2.3"
+    "ember-source-channel-url": "^1.1.0",
+    "ember-try": "^1.0.0",
+    "eslint-plugin-ember": "^6.2.0",
+    "eslint-plugin-node": "^9.0.1",
+    "loader.js": "^4.7.0"
   },
   "keywords": [
     "ember-addon",
     "component",
-    "jquery",
     "events"
   ],
   "dependencies": {
